--- a/Jogo/Layouts/Level 02.xml
+++ b/Jogo/Layouts/Level 02.xml
@@ -742,10 +742,10 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>4286</x>
-                        <y>766</y>
+                        <x>3973</x>
+                        <y>765</y>
                         <z>0</z>
-                        <width>9205</width>
+                        <width>9787</width>
                         <height>100</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
@@ -2597,6 +2597,11 @@
                                 <initial-state>Enabled</initial-state>
                             </properties>
                         </behavior-instance>
+                        <behavior-instance type="BoundToLayout">
+                            <properties>
+                                <bound-by>Edge</bound-by>
+                            </properties>
+                        </behavior-instance>
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -2623,12 +2628,17 @@
                     <behavior-instances>
                         <behavior-instance type="Pin" />
                         <behavior-instance type="Flash" />
+                        <behavior-instance type="BoundToLayout">
+                            <properties>
+                                <bound-by>Edge</bound-by>
+                            </properties>
+                        </behavior-instance>
                     </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>135</x>
-                        <y>621</y>
+                        <x>133</x>
+                        <y>634</y>
                         <z>0</z>
                         <width>115</width>
                         <height>148</height>
